--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "productManager.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon src/app.js"
   },
   "repository": {
     "type": "git",
@@ -21,6 +21,9 @@
   "dependencies": {
     "express": "^4.18.2",
     "express-handlebars": "^6.0.7",
+    "mongoose": "^6.10.0",
+    "mongoose-paginate": "^5.0.3",
+    "mongoose-paginate-v2": "^1.7.1",
     "socket.io": "^4.5.4"
   }
 }
