--- a/package.json
+++ b/package.json
@@ -19,11 +19,16 @@
   },
   "homepage": "https://github.com/Nacholede/ejercicio-backend-1#readme",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "express": "^4.18.2",
     "express-handlebars": "^6.0.7",
     "mongoose": "^6.10.0",
     "mongoose-paginate": "^5.0.3",
     "mongoose-paginate-v2": "^1.7.1",
+    "passport": "^0.6.0",
+    "passport-discord": "^0.1.4",
+    "passport-local": "^1.0.0",
+    "passport-twitter": "^1.0.4",
     "socket.io": "^4.5.4"
   }
 }
