--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
   },
   "homepage": "https://github.com/Nacholede/ejercicio-backend-1#readme",
   "dependencies": {
+    "@faker-js/faker": "^7.6.0",
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-handlebars": "^6.0.7",
+    "faker": "^6.6.6",
     "mongoose": "^6.10.0",
     "mongoose-paginate": "^5.0.3",
     "mongoose-paginate-v2": "^1.7.1",
