--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.18.2",
     "express-handlebars": "^6.0.7",
     "faker": "^6.6.6",
+    "logger": "^0.0.1",
     "mongoose": "^6.10.0",
     "mongoose-paginate": "^5.0.3",
     "mongoose-paginate-v2": "^1.7.1",
@@ -32,6 +33,7 @@
     "passport-discord": "^0.1.4",
     "passport-local": "^1.0.0",
     "passport-twitter": "^1.0.4",
-    "socket.io": "^4.5.4"
+    "socket.io": "^4.5.4",
+    "winston": "^3.8.2"
   }
 }
