--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "passport-local": "^1.0.0",
     "passport-twitter": "^1.0.4",
     "socket.io": "^4.5.4",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^4.6.3",
     "winston": "^3.8.2"
   }
 }
